# Employment-Narratives

./: .gitignore  .pre-commit-config.yaml  CITATION  LICENSE  README.md  environment.yml  functioning_model.ipynb  model_pad.ipynb  models_to_save.pkl  pyproject.toml  setup.cfg  test_notebook.ipynb
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
jigsaw/runs/Sep05_09-52-07_LaserUnicorn/: events.out.tfevents.1693900443.LaserUnicorn
jigsaw/runs/Sep05_10-05-46_LaserUnicorn/: events.out.tfevents.1693901152.LaserUnicorn
jigsaw/runs/Sep05_10-29-01_LaserUnicorn/: events.out.tfevents.1693902596.LaserUnicorn
jigsaw/runs/Sep05_12-13-40_LaserUnicorn/: events.out.tfevents.1693910062.LaserUnicorn
jigsaw/runs/Sep05_12-41-18_LaserUnicorn/: events.out.tfevents.1693910603.LaserUnicorn
jigsaw/runs/Sep05_13-43-20_LaserUnicorn/: events.out.tfevents.1693914242.LaserUnicorn
jigsaw/runs/Sep05_13-47-44_LaserUnicorn/: events.out.tfevents.1693914468.LaserUnicorn
jigsaw/runs/Sep05_13-48-36_LaserUnicorn/: events.out.tfevents.1693914519.LaserUnicorn
jigsaw/runs/Sep05_17-10-49_LaserUnicorn/: events.out.tfevents.1693926663.LaserUnicorn
jigsaw/runs/Sep05_17-27-40_LaserUnicorn/: events.out.tfevents.1693927664.LaserUnicorn
jigsaw/runs/Sep06_19-06-59_LaserUnicorn/: events.out.tfevents.1694020093.LaserUnicorn
paper/: EN.tex  EN_pres.tex  task_paper.py
src/EN/: __init__.py
src/EN/analysis/: data_info.yaml  model.py  model_config.yaml  predict.py  (+5 more)
tests/analysis/: test_model.py  test_predict.py
tests/data_management/: test_clean_data.py
(+161 files in other folders)
